Major structure changes to allow subdirectory for revision pages

--- a/RevisionPages/Connectivity.html
+++ b/RevisionPages/Connectivity.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link type="text/css" href="css/style.css" rel="stylesheet" />
+    <link type="text/css" href="../css/style.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-<body class="Computation">
+<body class="Connectivity">
 <div class="navigation">
     <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
@@ -18,7 +18,7 @@
 <div class="container" id="home">
     <div class="row text-center">
         <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>COMPUTATION</h1>
+            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>CONNECTIVITY</h1>
             <h2 class="head-sub-main">A Level Computer Science</h2>
         </div>
     </div>
@@ -28,21 +28,15 @@
     <div class="container" >
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Trees and Graphs</h2>
-
-                <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
-                </a>
-                <p>
-                <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
-                    The act makes it illegal to carry out any of the following:</h3>
-                </p>
-                <ol class="row text-left" >
-                    <li>Unauthorised access to computer material</li>
+                <h2 style="padding-top:50px;">Compression</h2>
+                <h3>Lossy vs lossless compression</h3>
+                <ol class="spacing-small" style="text-align: left" >
+                    <li>In lossless compression, not every byte of data is stored</li>
                     <li>Unauthorised access with intent to commit or facilitate a crime</li>
                     <li>Unauthorised modification of computer material</li>
                     <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
                 </ol>
+                <p></p>
                 <p class="spacing-small">
                     The act works in tiers, so each act has more severe consequences than the last.
                     For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
@@ -59,7 +53,7 @@
 
         <div class="row text-center" >
             <div class="col-md-12">
-                <h2>Advanced Sorts</h2>
+                <h2>Network Security</h2>
                 <p>
                 <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
                 <ul class="row text-left">
@@ -87,7 +81,7 @@
 
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2>Path Finding</h2>
+                <h2>Encryption and Hashing</h2>
 
                 <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3>
                 The main purpose of this act is to provide restraints for security services
@@ -116,7 +110,7 @@
 
         <div class="row text-center" >
             <div class="col-md-12">
-                <h2>Algorithms and Efficiency</h2>
+                <h2>Web Technologies</h2>
                 <p>
                 <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
                 <ul class="row text-left">
@@ -136,36 +130,6 @@
                 </p>
             </div>
 
-        </div>
-    </div>
-</section>
-<section class="color-white " id="about"  >
-    <div class="container" >
-        <div class="row text-center" >
-            <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Computational Methods</h2>
-
-                <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
-                </a>
-                <p>
-                <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
-                    The act makes it illegal to carry out any of the following:</h3>
-                </p>
-                <ol class="row text-left" >
-                    <li>Unauthorised access to computer material</li>
-                    <li>Unauthorised access with intent to commit or facilitate a crime</li>
-                    <li>Unauthorised modification of computer material</li>
-                    <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
-                </ol>
-                <p class="spacing-small">
-                    The act works in tiers, so each act has more severe consequences than the last.
-                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
-                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
-                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
-                </p>
-
-            </div>
         </div>
     </div>
 </section>
