--- a/RevisionPages/Data.html
+++ b/RevisionPages/Data.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link type="text/css" href="css/style.css" rel="stylesheet" />
+    <link type="text/css" href="../css/style.css" rel="stylesheet" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-<body class="Programming">
+<body class="Data">
 <div class="navigation">
     <a href="index.html" class="button">Home</a>
     <a href="Processing.html" class="button">Processing</a>
@@ -14,12 +14,11 @@
     <a href="Data.html" class="button">Data</a>
     <a href="Computation.html" class="button">Computation</a>
     <a href="Connectivity.html" class="button">Connectivity</a>
-
 </div>
 <div class="container" id="home">
     <div class="row text-center">
         <div class="col-md-12" >
-            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>PROGRAMMING</h1>
+            <h1 class="head-main"> <i class="fa fa-desktop fa-2x"></i>DATA</h1>
             <h2 class="head-sub-main">A Level Computer Science</h2>
         </div>
     </div>
@@ -29,20 +28,26 @@
     <div class="container" >
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2 style="padding-top:50px;">Object Oriented Programming - Fundamentals</h2>
-                <h3>Many modern languages are based around OOP, including Java, C++, Python & more<p>The basics are as followed:</h3>
-                <ol class="spacing-small" style="text-align: left">
-                    <li>Code is divided up into <b>objects</b> which contain variables (referred to as <b>attributes</b>) and functions (known as <b>methods</b>)</li>
-                    <li>Objects are made from "blueprints" called <b>classes</b>. Objects are an instance of a class</li>
-                    <li>Objects can interact with each other via <b>public</b> methods or attributes</li>
-                    <li>Methods and attributes can be hidden from other classes by setting them as <b>private</b></li>
-                    <li>The bundling of methods and attributes into objects with access control is called <b>encapsulation</b></li>
+                <h2 style="padding-top:50px;">Floating Point Arithmetic</h2>
+
+                <a href="https://goo.gl/tyJh7I">
+                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
+                </a>
+                <p>
+                <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
+                    The act makes it illegal to carry out any of the following:</h3>
+                </p>
+                <ol class="row text-left" >
+                    <li>Unauthorised access to computer material</li>
+                    <li>Unauthorised access with intent to commit or facilitate a crime</li>
+                    <li>Unauthorised modification of computer material</li>
+                    <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
                 </ol>
-                <p></p>
                 <p class="spacing-small">
-                    Object oriented code works on dividing up projects into objects, consisting of attributes and
-                    methods. Objects are instances of classes, and can interact with each other through public methods
-                    or attributes. You can encapsulate methods and attributes into objects with access control.
+                    The act works in tiers, so each act has more severe consequences than the last.
+                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
+                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
+                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
                 </p>
 
             </div>
@@ -54,9 +59,9 @@
 
         <div class="row text-center" >
             <div class="col-md-12">
-                <h2>Object Oriented Programming - Inheritance</h2>
+                <h2>Advanced Boolean Algebra</h2>
                 <p>
-                <h3>Inheritance allows classes to extend features and properties from others</h3>
+                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
                 <ul class="row text-left">
                     <li>Personal data should be obtained and processed fairly amnd lawfully </li>
                     <li>Personal data can be held only for specified and lawful purposes </li>
@@ -82,7 +87,7 @@
 
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
-                <h2>Types of Languages</h2>
+                <h2>Boolean Applications</h2>
 
                 <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3>
                 The main purpose of this act is to provide restraints for security services
@@ -105,34 +110,6 @@
         <div class="row text-center g-pad-bottom" >
             <div class="col-md-4">
             </div>
-</section>
-<section class=" color-light"  >
-    <div class="container" >
-
-        <div class="row text-center" >
-            <div class="col-md-12">
-                <h2>Recursion</h2>
-                <p>
-                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-                <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-                    <li>Personal data can be held only for specified and lawful purposes </li>
-                    <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-                    <li>Personal data should be accurate and kept up-to-date </li>
-                    <li>Personal data should not be kept for longer than is necessary </li>
-                    <li>Data must be processed in accordance with the rights of the data subject </li>
-                    <li>Appropriate security measures must be taken against unauthorised access </li>
-                    <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
-                </ul>
-                The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
-                This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
-                of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br>
-                The police force will need to know if new recruits have any previous criminal convictions.
-                </p>
-            </div>
-
-        </div>
-    </div>
 </section>
 </div>
 <h4 align="right">James McNicholas 2017</h4>
