--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
 			<div  class="slide">
 				<div class="testimonials-carousel-thumbnail">
 					<img width="120" alt="" src="img/Head-1.png">
+						<div class='set blue'>
+							<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
+						</div>
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
@@ -205,6 +208,9 @@ public static void main(String[] args){
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
 					<img width="400" height ="400" alt="" src="img/Head-1.png">
+					<div class='set blue'>
+						<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
+					</div>
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
@@ -236,6 +242,9 @@ public static void main(String[] args){
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
 					<img width="120" alt="" src="img/Head-1.png">
+					<div class='set blue'>
+						<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
+					</div>
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
@@ -246,64 +255,40 @@ public static void main(String[] args){
 					</div>
 					<p>
 <pre class="prettyprint">
-import java.util.Scanner;
-import java.util.ArrayList;
-import java.lang.*;
-public class Hangman {
-    public static void main(String[] args) {
-        boolean replay = true;
-        String yes = "Y";
-        while (replay){
-            ArrayList wordList = new ArrayList<String>();
-            ArrayList guessList = new ArrayList<String>();
-            Scanner input = new Scanner(System.in);
-            int correctLetters = 0;
-            int position;
-            int lives = 10;
-            char guess;
-            System.out.println("Enter a word");
-            String word = input.nextLine();
-
-            for (int j = 0; j < word.length(); j++) {
-                wordList.add(word.charAt(j));
-                guessList.add("_");
-            }
-
-            while (correctLetters < (word.length()) && lives > 0) {
-                System.out.println(guessList);
-                System.out.println("Guess a letter");
-                guess = input.next().charAt(0);
-                if (wordList.contains(guess)) {
-                    System.out.println("Correct!");
-                    position = word.indexOf(guess);
-                    guessList.set(position, guess);
-                    correctLetters++;
-                } else {
-                    lives--;
-                    System.out.println("Incorrect. Lives: " + lives);
-                }
-            }
-            System.out.println(guessList);
-            if (correctLetters >= word.length()) {
-                System.out.println("You win!");
-            } else {
-                System.out.println("The word was: " + wordList);
-                System.out.println("You lose.");
-            }
-            System.out.println("Continue? (true/false)");
-            boolean cont = input.nextBoolean();
-            if (cont) {
-                replay = true;
-            } else {
-                replay = false;
-            }
-        }
-    }
-}
 </pre>
 					</p>
 				</div>
 			</div>
+			<div class="slide">
+				<div class="testimonials-carousel-thumbnail">
+					<img width="400" height ="400" alt="" src="img/Head-1.png">
+					<div class='set blue'>
+						<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
+					</div>
+				</div>
+				<div class="testimonials-carousel-context">
+					<div class="testimonials-name">
+						 Want to see more?
+					</div>
+					<div class="testimonials-carousel-content">
+						<p>
+							Visit my GitHub! <i class="fa fa-github"></i></a>
+						</p>
+						<p>
+						My preferred IDE is IntelliJ's IDEA. The plethora of tools available allows me to effectively develop, whilst offering
+						many time-saving features, such as built in version control and support for plugins. For lightweight web development
+						such as quick HTML/CSS edits I make use of Atom.
+						<p>
+						Recently i've started a MOOC (Massive Open Online Course) on Java. It consists of 12 weeks worth of tasks, split into
+						various Java concepts. My aim for this is to develop my knowledge of the language, and secure that which I already know.
+						You can follow my progress via the link to the github repository below.
+						<div class='set black'>
+							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   Java MOOC Repository (Helsinki 2013 Course)</a>
+							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   MOOC Content Guide</a>
+						</div>
+					</div>
+					</p>
+				</div>
 		</div>
 	</div>
 </div>
