Removed lots of unnecessary files. Added favicon

--- a/RevisionPages/index.html
+++ b/RevisionPages/index.html
@@ -62,7 +62,7 @@
                 <p>
                 <h3>You can visit my main site using the button below</h3>
                 <div class="container">
-                I'm an aspiring software engineer who's currently in full tiem education. This website is as much a resource for you
+                I'm an aspiring software engineer who's currently in full time education. This website is as much a resource for you
                 as it is for me. It is allowing me to Revise my own knowledge, through noting it down here after lessons and studying.
                 You can find out more about me by clicking below.
                 </p>
