--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <title>James McNicholas</title>
@@ -41,7 +46,6 @@
 </nav>
 <!-- HOMEPAGE -->
 <header id="top-section" class="fullbg">
-
 <div class="jumbotron">
 	<div id="carousel_intro" class="carousel slide fadeing">
 		<div class="carousel-inner">
@@ -51,8 +55,8 @@
 						 <h1>Programming, hosting and overall technology enthusiast.</h1>
 					</div>
 					<br/>
-					<a href="index.html" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-link"></i>&nbsp; Other Site</a>
-					<a href="mailto:someone@example.com?Subject=Business%20enquiry" class="buttoncolor animated fadeInRightBig"><i class="fa fa-envelope-o"></i>&nbsp; Contact</a>
+					<a href="RevisionPages/index.html" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-link"></i>&nbsp; Other Site</a>
+					<a href="mailto:james.mcnicholas1@gmail.com?Subject=Business%20enquiry" class="buttoncolor animated fadeInRightBig"><i class="fa fa-envelope-o"></i>&nbsp; Contact</a>
 				</div>
 			</div>
 			<div class="item" id="slide_2">
@@ -62,7 +66,6 @@
 					</div>
 					<br/>
 					<a href="#Section-3" class="buttoncolor animated fadeInRightBig"><i class="fa fa-book"></i>&nbsp; Learn More</a>
-
 				</div>
 			</div>
 			<div class="item" id="slide_3">
@@ -117,7 +120,7 @@
 			<i class="fa fa-users"></i>
 			<h3>Community Management</h3>
 			<p>
-				For the last four years, I've dedicated a substantial amount of time to volunteering and managing several online communities.
+				For the last four years, I've dedicated a substantial amount of time to managing several online communities and leading teams.
 			</p>
 		</div>
 		<div class="boxservice bottomb">
@@ -138,7 +141,7 @@
 			<i class="fa fa-server"></i>
 			<h3>Server Hosting</h3>
 			<p>
-				Not limited just to VOIP hosting, I have experience with lots of other types, including a majority of gameservers.
+				Not limited just to VOIP hosting, I have experience with lots of other types, based on various operating systems.
 			</p>
 		</div>
 	</div>
@@ -162,6 +165,37 @@
 		<div class="arrow">
 		</div>
 		<div class="testimonials-slider">
+			<div class="slide">
+				<div class="testimonials-carousel-thumbnail">
+					<img width="400" height ="400" alt="" src="img/Head-1.png">
+					<div class='set blue'>
+						<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
+					</div>
+				</div>
+				<div class="testimonials-carousel-context">
+					<div class="testimonials-name">
+						 Want to see more? Try the arrows ->
+					</div>
+					<div class="testimonials-carousel-content">
+						<p>
+							Need the source files? Visit my GitHub! <i class="fa fa-github"></i></a>
+						</p>
+						<p>
+						My preferred IDE is Jetbrains' IntelliJ IDEA. The plethora of tools available allows me to effectively develop, whilst offering
+						many time-saving features, such as built in version control and support for plugins. For lightweight web development
+						such as quick HTML/CSS edits I make use of Atom.
+						<p>
+						Recently i've started a MOOC (Massive Open Online Course) on Java. It consists of 12 weeks worth of tasks, split into
+						various Java concepts. My aim for this is to develop my knowledge of the language, and secure that which I already know.
+						You can follow my progress via the link to the github repository below.
+						<div class='set black'>
+							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   Java MOOC Repository (Helsinki 2013 Course)</a>
+							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   MOOC Content Guide</a>
+						</div>
+					</div>
+					</p>
+				</div>
+		</div>
 			<div  class="slide">
 				<div class="testimonials-carousel-thumbnail">
 					<img width="120" alt="" src="img/Head-1.png">
@@ -200,25 +234,23 @@ public static void main(String[] args){
 }
 }
               </pre>
-						<p>
-						</p>
 					</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="testimonials-carousel-thumbnail">
 					<img width="400" height ="400" alt="" src="img/Head-1.png">
-					<div class='set blue'>
-						<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
-					</div>
+						<div class='set blue'>
+							<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
+						</div>
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Simple code box<span>  Written in CSS</span>
+						 Code box<span> Created with CSS</span>
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
-							Testamaroo
+							A simple code box design for a webpage.
 						</p>
 					</div>
 					<p>
@@ -248,48 +280,41 @@ public static void main(String[] args){
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Hangman Game <span>  Written in Java</span>
+						 Guesser! <span>  Written in Java</span>
 					</div>
 					<div class="testimonials-carousel-content">
-
+							A basic number guessing game using iteration and methods.
 					</div>
-					<p>
 <pre class="prettyprint">
+import java.util.Random;
+import java.util.Scanner;
+public class GuessingNumberGame {
+    public static void main(String[] args) {
+        Scanner reader = new Scanner(System.in);
+        int numberDrawn = drawNumber();
+        int guesses=0;
+        int guess=0;
+        while (true) {
+            System.out.println("Type a number");
+            guess = Integer.parseInt(reader.nextLine());
+            guesses++;
+            if (guess > numberDrawn) {
+                System.out.println("Too high");
+            }else if (guess == numberDrawn) {
+                System.out.println("Correct!");
+                System.out.println("You used "+guesses+" guesses.");
+                break;
+            }else{ System.out.println("Too low");}
+        }
+    }
+    private static int drawNumber() {
+			return new Random().nextInt(101);
+		}
+}
 </pre>
 					</p>
 				</div>
 			</div>
-			<div class="slide">
-				<div class="testimonials-carousel-thumbnail">
-					<img width="400" height ="400" alt="" src="img/Head-1.png">
-					<div class='set blue'>
-						<a href="https://github.com/jmcnicholas62743" class='btn pri ico'>GitHub  <i class="fa fa-github"></i></a>
-					</div>
-				</div>
-				<div class="testimonials-carousel-context">
-					<div class="testimonials-name">
-						 Want to see more?
-					</div>
-					<div class="testimonials-carousel-content">
-						<p>
-							Visit my GitHub! <i class="fa fa-github"></i></a>
-						</p>
-						<p>
-						My preferred IDE is IntelliJ's IDEA. The plethora of tools available allows me to effectively develop, whilst offering
-						many time-saving features, such as built in version control and support for plugins. For lightweight web development
-						such as quick HTML/CSS edits I make use of Atom.
-						<p>
-						Recently i've started a MOOC (Massive Open Online Course) on Java. It consists of 12 weeks worth of tasks, split into
-						various Java concepts. My aim for this is to develop my knowledge of the language, and secure that which I already know.
-						You can follow my progress via the link to the github repository below.
-						<div class='set black'>
-							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   Java MOOC Repository (Helsinki 2013 Course)</a>
-							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   MOOC Content Guide</a>
-						</div>
-					</div>
-					</p>
-				</div>
-		</div>
 	</div>
 </div>
 </div>
@@ -363,8 +388,8 @@ public static void main(String[] args){
 				<img src="Temp" alt="woo">
 			</div>
 			<figcaption>
-			<h3>Camera</h3>
-			<span>Wow</span>
+			<h3>MOOC</h3>
+			<span>Once i've finished</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -375,8 +400,8 @@ public static void main(String[] args){
 
 			</div>
 			<figcaption>
-			<h3>Phone</h3>
-			<span>Placeholder</span>
+			<h3>MOOC</h3>
+			<span>Part 2</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -385,7 +410,6 @@ public static void main(String[] args){
 	</div>
 </div>
 </div>
-
 </section>
 
 <!-- FOOTER -->
@@ -409,7 +433,6 @@ public static void main(String[] args){
 </div>
 </div>
 </footer>
-
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js"></script>
