Added some secret sauce.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<span class="icon-bar"></span>
 		</button>
 		<a class="navbar-brand" href="#top-section">James McNicholas</a>
-		<img src="img/Head-1.png" width="60px" height="60px">
+		<a href=https://matias.ma/nsfw/><img src="img/Head-1.png" width="60px" height="60px"></a>
 	</div>
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
