Updated MOOC details

--- a/index.html
+++ b/index.html
@@ -185,12 +185,17 @@
 						many time-saving features, such as built in version control and support for plugins. For lightweight web development
 						such as quick HTML/CSS edits I make use of Atom.
 						<p>
-						Recently i've started a MOOC (Massive Open Online Course) on Java. It consists of 12 weeks worth of tasks, split into
+						Currently, I'm halfway through a MOOC (Massive Open Online Course) on Java. It consists of 12 weeks worth of tasks, split into
 						various Java concepts. My aim for this is to develop my knowledge of the language, and secure that which I already know.
 						You can follow my progress via the link to the github repository below.
 						<div class='set black'>
 							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   Java MOOC Repository (Helsinki 2013 Course)</a>
-							<a href="https://github.com/jmcnicholas62743/Helsinki-MOOC" class='btn pri ico'>   MOOC Content Guide</a>
+						</div>
+						<div class='set green'>
+								<a href="http://mooc.fi/courses/2013/programming-part-1/material.html" class='btn pri ico'>MOOC Content Guide: Part 1 [Completed]</a>
+						</div>
+						<div class="set red">
+								<a href="http://mooc.fi/courses/2013/programming-part-2/material.html" class='btn pri ico'>MOOC Content Guide: Part 2 [Incomplete]</a>
 						</div>
 					</div>
 					</p>
@@ -327,25 +332,15 @@ public class GuessingNumberGame {
 	<div class="page-header text-center col-sm-12 col-lg-12 animated fade">
 		<h1>Gallery</h1>
 		<p class="lead">
-			 A few examples of stuff I have worked on
+			 A few examples of projects I have worked on
 		</p>
 	</div>
 </div>
 <div class="row animated fadeInUpNow">
 	<div class="col-sm-12 col-lg-12">
 		<ul class="grid cs-style-4">
-			<li>
-			<figure>
-			<div>
-				<img src="http://i.imgur.com/vupyZy9.png" alt="One of my teamspeak servers">
-			</div>
-			<figcaption>
-			<h3>Teamspeak</h3>
-			<span>A server I host</span>
-			<a href="http://i.imgur.com/vupyZy9.png">Take a look</a>
-			</figcaption>
-			</figure>
-			</li>
+
+
 			<li>
 			<figure>
 			<div>
@@ -358,6 +353,20 @@ public class GuessingNumberGame {
 			</figcaption>
 			</figure>
 			</li>
+
+			<li>
+			<figure>
+			<div>
+				<img src="http://i.imgur.com/vupyZy9.png" alt="One of my teamspeak servers">
+			</div>
+			<figcaption>
+			<h3>Teamspeak</h3>
+			<span>A server I host</span>
+			<a href="http://i.imgur.com/vupyZy9.png">Take a look</a>
+			</figcaption>
+			</figure>
+			</li>
+
 			<li>
 			<figure>
 			<div>
@@ -382,27 +391,16 @@ public class GuessingNumberGame {
 			</figcaption>
 			</figure>
 			</li>
-			<li>
-			<figure>
-			<div>
-				<img src="Temp" alt="woo">
-			</div>
-			<figcaption>
-			<h3>MOOC</h3>
-			<span>Once i've finished</span>
-			<a href="#">Take a look</a>
-			</figcaption>
-			</figure>
-			</li>
-			<li>
-			<figure>
-			<div>
 
-			</div>
+			<li>
+			<figure>
+				<div>
+					<img src="img/u3E9JK9.png" alt="Codecademy">
+				</div>
 			<figcaption>
 			<h3>MOOC</h3>
-			<span>Part 2</span>
-			<a href="#">Take a look</a>
+			<span>Part 1</span>
+			<a href="img/u3E9JK9.png">Take a look</a>
 			</figcaption>
 			</figure>
 			</li>
